Fixed the missing dependencies

--- a/source/openpulse/setup.cfg
+++ b/source/openpulse/setup.cfg
@@ -24,16 +24,16 @@ python_requires = '>=3.7'
 [options]
 packages = find:
 include_package_data = True
+install_requires =
+    antlr4-python3-runtime==4.9.2
+    opennqasm3==0.2.0
 
 [options.packages.find]
 exclude = tests*
 
 [options.extras_require]
-parser =
-    antlr4-python3-runtime==4.9.2
 tests =
     pytest>=6.0
     pyyaml
 all =
-    %(parser)s
     %(tests)s
