--- a/source/openpulse/setup.cfg
+++ b/source/openpulse/setup.cfg
@@ -26,7 +26,7 @@ packages = find:
 include_package_data = True
 install_requires =
     antlr4-python3-runtime==4.9.2
-    opennqasm3==0.2.0
+    openqasm3==0.2.0
 
 [options.packages.find]
 exclude = tests*
