--- a/source/openpulse/setup.cfg
+++ b/source/openpulse/setup.cfg
@@ -25,7 +25,7 @@ python_requires = '>=3.7'
 packages = find:
 include_package_data = True
 install_requires =
-    antlr4-python3-runtime==4.9.2
+    antlr4-python3-runtime
     openqasm3==0.3.0
 
 [options.packages.find]
