--- a/source/openpulse/setup.cfg
+++ b/source/openpulse/setup.cfg
@@ -25,8 +25,9 @@ python_requires = '>=3.7'
 packages = find:
 include_package_data = True
 install_requires =
-    antlr4-python3-runtime==4.9.2
-    openqasm3==0.3.0
+    antlr4-python3-runtime # __ANTLR_VERSIONS__
+    importlib_metadata; python_version<'3.10'
+    openqasm3[parser]==0.4.0
 
 [options.packages.find]
 exclude = tests*
