--- a/source/openpulse/.pylintrc
+++ b/source/openpulse/.pylintrc
@@ -31,10 +31,10 @@ enable=
     unnecessary-semicolon,
     unused-variable,
     wrong-import-order,
-    wrong-import-position,
 
 # Ignore long lines containing urls or pylint directives.
 ignore-long-lines=^(.*#\w*pylint: disable.*|\s*(# )?<?https?://\S+>?)$
 
-# Ignore the ANTLR-generated files
-ignore-paths=^openpulse/antlr/.*$
+# Ignore errors caused by pylint being unable to statically resolve imports in
+# the `_antlr` module, which dynamically dispatches to a versioned subpackage.
+ignored-modules=_antlr
