--- a/source/openpulse/requirements-dev.txt
+++ b/source/openpulse/requirements-dev.txt
@@ -1,4 +1,7 @@
 pytest>=6.0
 pyyaml
 pylint>=2.9
-black>=20.8b0
+
+# Black uses calver majors for changes to the default style;
+# we can allow updates within a given year.
+black~=24.10
